    - Added a "game_over" routine in "extra.asm" that is called during the game over screen, which could be useful to initialize/save some addresses when getting a game over.
    - Fixed issue with the "Time Up Fix" patch where dying due to a timeout would prevent the timer from working after respawning (thanks worldpeace for reporting this).
    - Small optimization in Death Prelude SFX.

v0.3.2:
    - Made the death counter cap at 99999 deaths, instead of overflowing back to 0.
    - Fixed silent room checkpoint SFX sometimes not playing.
    - Moved "retry.asm" in a "library" folder for consistency.
    - Added "level_end_frame.asm" to run level-specific routines at the end of each GM14 frame.

v0.3.1:
    - Made the oscillating cursor option work with the black box enabled.
    - Added an optional button that can trigger the "Exit" prompt function even if the exit option is disabled (thanks to Mega for the suggestion).
    - Fixed the green star block coin counter not resetting when dying (thanks to Koopster for reporting this).

v0.3.0:
    - Optimized the drawing routine to use as few OAM slots as possible (min 6, max 15) depending on the current box and exit disable settings. Before, it was always either 11 or 15.
    - Now the cursor actually uses the !cursor_palette (before it used !letter_palette).
    - Allow for ObjecTool custom normal objects $42-$4F along with $52-$FF, since they're never used for the custom midways (thanks to MarioFanGamer for suggesting this).
    - Added new cursor options (static, blinking, oscillating).
    - Fixed an issue with the sprite initial facing fix that sometimes caused Yoshi to run away in the wrong direction when hit by a sprite while riding him (thanks to Abdu for reporting this).
    - Fixed an issue where dying on the same frame Baby Yoshi started the growing animation would cause sprites and animation to not be frozen while the prompt is shown (thanks to LouisDoucet for reporting this).